--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@
 		-ms-transform: translate3d(0,0,0);
 		transform: translate3d(0,0,0);
 		background-color: #000000;
-		background-image: url("http://joway.wang/css/images/bg.jpg");
+		background-image: url("http://joeywen.github.io/lovesheryl/css/images/bg.jpg");
 		background-position: bottom left;
 		background-repeat: repeat-x;
 		height: 100%;
